gccida/c1/add_pure_or_virtual_attribute
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/add_pure_or_virtual_attribute/src/dwarf2out.c:9944:21: error: use of undeclared identifier 'debug_info_level_0'
if ( ( unsigned int)debug_info_level_0 >= DINFO_LEVEL_NORMAL ) 
                    ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/add_pure_or_virtual_attribute/src/obj/dwarf2out.o] Error 1
